--- a/HeatRunAnalysisTool/HeatRunAnalysisTool.csproj
+++ b/HeatRunAnalysisTool/HeatRunAnalysisTool.csproj
@@ -62,12 +62,6 @@
     <Compile Include="NormalLoadingLimit.cs" />
     <Compile Include="PlannedLoadingLimit.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ProgressForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ProgressForm.Designer.cs">
-      <DependentUpon>ProgressForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShortTermLoadingLimit.cs" />
     <Compile Include="SubstationTransformer.cs" />
@@ -77,11 +71,14 @@
     <Compile Include="ThresholdForm.Designer.cs">
       <DependentUpon>ThresholdForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TransfomerLifeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransfomerLifeForm.Designer.cs">
+      <DependentUpon>TransfomerLifeForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ProgressForm.resx">
-      <DependentUpon>ProgressForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -94,6 +91,9 @@
     </Compile>
     <EmbeddedResource Include="ThresholdForm.resx">
       <DependentUpon>ThresholdForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TransfomerLifeForm.resx">
+      <DependentUpon>TransfomerLifeForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
